ggml/69/373696c965ec7de733aa56040a05267d13a926/ggml-2-x86-cpu/ctest_debug.log
+ cmake -DCMAKE_BUILD_TYPE=Debug ..
-- The C compiler identification is GNU 11.4.0
-- The CXX compiler identification is GNU 11.4.0
-- Detecting C compiler ABI info
-- Detecting C compiler ABI info - done
-- Check for working C compiler: /usr/bin/cc - skipped
-- Detecting C compile features
-- Detecting C compile features - done
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Found Git: /usr/bin/git (found version "2.34.1") 
-- Performing Test CMAKE_HAVE_LIBC_PTHREAD
-- Performing Test CMAKE_HAVE_LIBC_PTHREAD - Success
-- Found Threads: TRUE  
-- CMAKE_SYSTEM_PROCESSOR: x86_64
GNU ld (GNU Binutils for Ubuntu) 2.38
-- x86 detected
-- Linux detected
-- x86 detected
-- Linux detected
-- Configuring done (0.4s)
-- Generating done (0.0s)
-- Build files have been written to: /home/ggml/work/ggml/build-ci-debug

real	0m0.441s
user	0m0.282s
sys	0m0.102s
+ make -j
[  1%] Building CXX object examples/CMakeFiles/common.dir/common.cpp.o
[  2%] Building C object src/CMakeFiles/ggml.dir/ggml.c.o
[  3%] Building C object src/CMakeFiles/ggml.dir/ggml-backend.c.o
[  4%] Building C object src/CMakeFiles/ggml.dir/ggml-quants.c.o
[  5%] Building C object src/CMakeFiles/ggml.dir/ggml-alloc.c.o
[  6%] Linking C shared library libggml.so
[  6%] Built target ggml
[  8%] Building C object tests/CMakeFiles/test-vec0.dir/test-vec0.c.o
[  8%] Building C object tests/CMakeFiles/test-vec1.dir/test-vec1.c.o
[  9%] Building CXX object tests/CMakeFiles/test-grad0.dir/test-grad0.cpp.o
[ 10%] Building CXX object tests/CMakeFiles/test-quantize-fns.dir/test-quantize-fns.cpp.o
[ 11%] Building CXX object tests/CMakeFiles/test-quantize-perf.dir/test-quantize-perf.cpp.o
[ 12%] Building CXX object tests/CMakeFiles/test-opt.dir/test-opt.cpp.o
[ 13%] Building C object tests/CMakeFiles/test-mul-mat0.dir/test-mul-mat0.c.o
[ 14%] Building C object tests/CMakeFiles/test0.dir/test0.c.o
[ 15%] Building C object tests/CMakeFiles/test-mul-mat2.dir/test-mul-mat2.c.o
[ 16%] Building C object tests/CMakeFiles/test1.dir/test1.c.o
[ 17%] Building C object tests/CMakeFiles/test2.dir/test2.c.o
[ 18%] Building C object tests/CMakeFiles/test3.dir/test3.c.o
[ 19%] Linking C executable ../bin/test-vec0
[ 20%] Building C object tests/CMakeFiles/test-pool.dir/test-pool.c.o
[ 21%] Linking C executable ../bin/test0
[ 22%] Building CXX object tests/CMakeFiles/test-arange.dir/test-arange.cpp.o
[ 23%] Building CXX object tests/CMakeFiles/test-timestep_embedding.dir/test-timestep_embedding.cpp.o
[ 24%] Building C object tests/CMakeFiles/test-conv-transpose.dir/test-conv-transpose.c.o
[ 25%] Linking CXX executable ../bin/test-opt
[ 26%] Building C object tests/CMakeFiles/test-rel-pos.dir/test-rel-pos.c.o
[ 27%] Building C object tests/CMakeFiles/test-dup.dir/test-dup.c.o
[ 28%] Linking C executable ../bin/test1
[ 29%] Linking C executable ../bin/test-mul-mat0
[ 29%] Built target test-vec0
[ 30%] Linking C executable ../bin/test-conv-transpose
[ 31%] Linking C executable ../bin/test2
[ 32%] Building C object tests/CMakeFiles/test-xpos.dir/test-xpos.c.o
[ 32%] Built target test1
[ 33%] Building CXX object tests/CMakeFiles/test-conv1d.dir/test-conv1d.cpp.o
[ 34%] Building C object tests/CMakeFiles/test-customop.dir/test-customop.c.o
[ 34%] Built target test0
[ 35%] Building CXX object tests/CMakeFiles/test-conv2d.dir/test-conv2d.cpp.o
[ 35%] Built target test-opt
[ 36%] Linking C executable ../bin/test3
[ 37%] Building CXX object tests/CMakeFiles/test-backend-buffer.dir/test-backend-buffer.cpp.o
[ 38%] Linking C executable ../bin/test-dup
[ 39%] Building CXX object tests/CMakeFiles/test-backend-ops.dir/test-backend-ops.cpp.o
[ 40%] Building CXX object tests/CMakeFiles/test-mul-mat.dir/test-mul-mat.cpp.o
[ 40%] Built target test-conv-transpose
[ 41%] Linking CXX executable ../bin/test-arange
[ 42%] Linking C executable ../bin/test-rel-pos
[ 43%] Linking C executable ../bin/test-xpos
[ 44%] Building CXX object examples/CMakeFiles/common-ggml.dir/common-ggml.cpp.o
[ 44%] Built target test-mul-mat0
[ 45%] Linking C executable ../bin/test-pool
[ 46%] Building CXX object examples/whisper/CMakeFiles/whisper-cpp.dir/whisper.cpp.o
[ 46%] Built target test3
[ 47%] Building CXX object examples/mnist/CMakeFiles/mnist-cpu.dir/main-cpu.cpp.o
[ 47%] Built target test2
[ 47%] Built target test-xpos
[ 48%] Linking CXX executable ../bin/test-backend-buffer
[ 48%] Built target test-dup
[ 50%] Linking C executable ../bin/test-customop
[ 51%] Linking C executable ../bin/test-vec1
[ 51%] Built target test-rel-pos
[ 52%] Building CXX object examples/simple/CMakeFiles/simple-ctx.dir/simple-ctx.cpp.o
[ 52%] Built target test-pool
[ 52%] Built target test-backend-buffer
[ 53%] Linking CXX executable ../bin/test-timestep_embedding
[ 54%] Building CXX object examples/simple/CMakeFiles/simple-backend.dir/simple-backend.cpp.o
[ 55%] Linking CXX executable ../bin/test-grad0
[ 55%] Built target test-arange
[ 55%] Built target test-customop
[ 55%] Built target test-vec1
[ 55%] Built target test-grad0
/home/ggml/work/ggml/tests/test-conv1d.cpp:24:13: warning: ‘void ggml_log_callback_default(ggml_log_level, const char*, void*)’ defined but not used [-Wunused-function]
   24 | static void ggml_log_callback_default(ggml_log_level level, const char * text, void * user_data) {
      |             ^~~~~~~~~~~~~~~~~~~~~~~~~
[ 55%] Built target test-timestep_embedding
[ 56%] Linking C executable ../bin/test-mul-mat2
[ 57%] Linking CXX executable ../bin/test-quantize-fns
[ 58%] Linking CXX executable ../bin/test-conv1d
[ 59%] Linking CXX executable ../../bin/simple-ctx
[ 59%] Built target test-mul-mat2
[ 59%] Built target test-quantize-fns
/home/ggml/work/ggml/examples/common-ggml.cpp: In function ‘bool ggml_common_quantize_0(std::ifstream&, std::ofstream&, ggml_ftype, const std::vector<std::__cxx11::basic_string<char> >&, const std::vector<std::__cxx11::basic_string<char> >&)’:
/home/ggml/work/ggml/examples/common-ggml.cpp:50:12: warning: enumeration value ‘GGML_FTYPE_MOSTLY_IQ1_M’ not handled in switch [-Wswitch]
   50 |     switch (ftype) {
      |            ^
[ 60%] Linking CXX executable ../bin/test-mul-mat
/home/ggml/work/ggml/examples/common-ggml.cpp:177:20: warning: enumeration value ‘GGML_TYPE_I64’ not handled in switch [-Wswitch]
  177 |             switch ((ggml_type) ttype) {
      |                    ^
/home/ggml/work/ggml/examples/common-ggml.cpp:177:20: warning: enumeration value ‘GGML_TYPE_F64’ not handled in switch [-Wswitch]
/home/ggml/work/ggml/examples/common-ggml.cpp:177:20: warning: enumeration value ‘GGML_TYPE_IQ1_M’ not handled in switch [-Wswitch]
[ 60%] Built target test-conv1d
[ 60%] Built target simple-ctx
/home/ggml/work/ggml/tests/test-conv2d.cpp:24:13: warning: ‘void ggml_log_callback_default(ggml_log_level, const char*, void*)’ defined but not used [-Wunused-function]
   24 | static void ggml_log_callback_default(ggml_log_level level, const char * text, void * user_data) {
      |             ^~~~~~~~~~~~~~~~~~~~~~~~~
[ 60%] Built target test-mul-mat
[ 61%] Linking CXX executable ../../bin/simple-backend
[ 62%] Linking CXX executable ../../bin/mnist-cpu
[ 63%] Linking CXX executable ../bin/test-conv2d
[ 63%] Built target simple-backend
[ 63%] Built target test-conv2d
[ 63%] Built target mnist-cpu
[ 64%] Linking CXX executable ../bin/test-quantize-perf
[ 64%] Built target test-quantize-perf
/home/ggml/work/ggml/examples/whisper/whisper.cpp: In function ‘const char* whisper_print_system_info()’:
/home/ggml/work/ggml/examples/whisper/whisper.cpp:3855:42: error: ‘ggml_cpu_has_cublas’ was not declared in this scope; did you mean ‘ggml_cpu_has_gpublas’?
 3855 |     s += "CUDA = "      + std::to_string(ggml_cpu_has_cublas())    + " | ";
      |                                          ^~~~~~~~~~~~~~~~~~~
      |                                          ggml_cpu_has_gpublas
[ 65%] Linking CXX executable ../bin/test-backend-ops
[ 65%] Built target test-backend-ops
make[2]: *** [examples/whisper/CMakeFiles/whisper-cpp.dir/build.make:76: examples/whisper/CMakeFiles/whisper-cpp.dir/whisper.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:1301: examples/whisper/CMakeFiles/whisper-cpp.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
[ 66%] Linking CXX static library libcommon.a
[ 66%] Built target common
[ 67%] Linking CXX static library libcommon-ggml.a
[ 67%] Built target common-ggml
make: *** [Makefile:146: all] Error 2

real	0m4.181s
user	0m18.121s
sys	0m1.950s
